<resources>
    <string name="app_name">UPay</string>
    <string name="next">Next</string>
    <string name="on_boarding_image">on boarding image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="access_account">Access account</string>
    <string name="let_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_twitter">Continue with Twitter</string>
    <string name="or">or</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="contact_detail_otp">Select contact detail to send OTP</string>
    <string name="via_sms">via SMS:</string>
    <string name="continue_str">Continue</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="create_new_password">Create new password</string>
    <string name="successful">Successful</string>
    <string name="reason_for_using_upay">Reason for using Upay</string>
    <string name="reason_info">We want to provide the best experience according to your needs.</string>
    <string name="skip">Skip</string>
    <string name="let_verify_your_identity">Let\'s Verify Your Identity</string>
    <string name="verify_identity_info">We are required to verify your identity before you can use
        the service. Your information will be encrypted and stored securely.</string>
    <string name="verify_identity">Verify Identity</string>
    <string name="change">Change</string>
    <string name="proof_of_residency">Proof of Residency</string>
    <string name="proof_of_residency_info">Select your Country of residence and choose method of identification</string>
    <string name="nationality">Nationality</string>
    <string name="choose_verification_method">Choose verification method</string>
    <string name="photo_id_card">Photo ID Card</string>
    <string name="photo_id_info">Please point the camera at the ID Card</string>
    <string name="selfie_with_id_card">Selfie with ID Card</string>
    <string name="selfie_with_id_card_info">Please look at the Camera and hold still</string>
    <string name="submit">Submit</string>
    <string name="retake">Retake</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="fill_your_profile_info">Don\'t worry you can change it later</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="create_new_pin">Create New Pin</string>
    <string name="new_pin_info">Add a Pin to make your account more secured.</string>
    <string name="set_your_fingerprint">Set Your Fingerprint</string>
    <string name="set_fingerprint_info">Add a Fingerprint to make your account more secured.</string>
    <string name="set_fingerprint_info_2">Please click on Continue to get started.</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="face_recognition_info">Add Face Recognition to make your account more secured.</string>
    <string name="verifying_your_face">Verifying your face</string>
    <string name="good_morning">Good Morning🙌</string>
    <string name="dev_name">Auwal Abubakar</string>
    <string name="your_balance">Your Balance</string>
    <string name="transfer">Transfer</string>
    <string name="request">Request</string>
    <string name="in_and_out"><![CDATA[In & Out]]></string>
    <string name="see_all">See All</string>
    <string name="promo_and_discount"><![CDATA[Promo & Discount]]></string>
    <string name="notification">Notification</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="add_new_recipient">Add New Recipient</string>
    <string name="select_type">Select Type:</string>
    <string name="account_number">Account Number</string>
    <string name="schedule">Schedule</string>
    <string name="hours">Hours</string>
    <string name="date">Date</string>
    <string name="select_category">Select category</string>
    <string name="notes">Notes</string>
    <string name="amount">Amount (%s)</string>
    <string name="bill">Bill (%s)</string>
    <string name="name">Name</string>
    <string name="bank_account">Bank Account</string>
    <string name="category">Category</string>
    <string name="please_enter_your_pin">Please enter your PIN to confirm payment</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="status">Status</string>
    <string name="completed">Completed</string>
    <string name="electricity">Electricity</string>
    <string name="customer_id">Customer ID</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="all_services">All Services</string>
    <string name="profile">Profile</string>
    <string name="all_transactions">All Transactions</string>
    <string name="statistics_graph">Statistics Graph</string>
    <string name="transactions">Transactions</string>
    <string name="scan_and_pay">Scan and Pay</string>
    <string name="camera_qr_code_info">Please point the camera at the QR Code</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="scan">Scan</string>
    <string name="u_card">U-Card</string>
    <string name="on_boarding_heading_1">Have an amazing experience with UPay right now!</string>
    <string name="on_boarding_heading_2">The best app for finance, banking and e-wallet today</string>
    <string name="on_boarding_heading_3">Manage finances easily with secure payments</string>
    <string name="get_started">Get Started</string>
</resources>