<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/statistics"
        android:enabled="true"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/scanQrCode"
        android:enabled="false"
        android:title=""
        app:showAsAction="never" />

    <item
        android:id="@+id/uCard"
        android:enabled="true"
        android:icon="@drawable/ic_wallet"
        android:title="@string/u_card"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText" />
    
</menu>