<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/access_account"
        android:src="@drawable/undraw_access_account" />

    <TextView
        style="@style/OnBoardingTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/let_you_in" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookLogin"
            style="@style/SocialMediaLoginStyle"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_facebook"
            android:textSize="12sp"
            app:icon="@drawable/facebook_logo"
            app:iconTint="@android:color/holo_blue_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLogin"
            style="@style/SocialMediaLoginStyle"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google"
            android:textSize="12sp"
            app:icon="@drawable/google_logo"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twitterLogin"
            style="@style/SocialMediaLoginStyle"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_twitter"
            android:textSize="12sp"
            app:icon="@drawable/twitter_logo"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="24dp"
        android:layout_height="wrap_content">

        <View
            android:layout_width="48dp"
            android:layout_height="1dp"
            android:alpha="0.8"
            android:background="@color/textColor"
            android:layout_marginEnd="@dimen/small_margin"
            android:backgroundTint="@color/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/or"/>

        <View
            android:layout_width="48dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/small_margin"
            android:alpha="0.8"
            android:background="@color/textColor"
            android:backgroundTint="@color/textColor"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:text="@string/sign_in_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/UpayButtonStyle" />

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_marginEnd="2dp"
            android:alpha=".9"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_1"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/sign_up"/>
    </LinearLayout>

</LinearLayout>