<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        style="@style/SetupTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set_your_fingerprint"/>

    <TextView
        style="@style/SetupSubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/set_fingerprint_info" />


    <!-- finger print image -->
    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"/>


    <TextView
        style="@style/SetupSubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/set_fingerprint_info_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"
            android:text="@string/skip"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/orange_2"
            style="@style/UpayButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"
            android:text="@string/continue_str"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/UpayButtonStyle"/>
    </LinearLayout>

</LinearLayout>
