<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <TextView
        style="@style/SetupTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/proof_of_residency"/>

    <TextView
        style="@style/SetupSubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/proof_of_residency_info" />

    <TextView
        style="@style/SetupSubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/nationality" />

    <include
        android:layout_margin="16dp"
        layout="@layout/reasons_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <TextView
        style="@style/SetupSubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/choose_verification_method" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/verificationMethodRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="4"
        android:layout_margin="16dp"
        tools:listitem="@layout/reasons_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:text="@string/continue_str"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/UpayButtonStyle" />


</LinearLayout>