<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_medium"
        android:padding="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:text="@string/please_enter_your_pin"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/pin_view_bg" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/pin_view_bg" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/pin_view_bg" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/pin_view_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_6" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="X" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnter"
            style="@style/KeyboardInputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text=">" />

    </LinearLayout>

</LinearLayout>