<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <TextView
        style="@style/SetupTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reason_for_using_upay"/>

    <TextView
        style="@style/SetupSubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/reason_info" />
    
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reasonsRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="4"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/reasons_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"
            android:text="@string/skip"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/orange_2"
            style="@style/UpayButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:layout_weight="2"
            android:text="@string/continue_str"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/UpayButtonStyle"/>
    </LinearLayout>

</LinearLayout>