<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        app:startIconTint="@color/orange_1"
        app:startIconDrawable="@drawable/ic_password"
        android:textColorHint="@color/textColor"
        app:passwordToggleContentDescription="Show Password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange_1"
        style="@style/TextInputStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/confirm_password"
        app:startIconTint="@color/orange_1"
        app:startIconDrawable="@drawable/ic_password"
        android:textColorHint="@color/textColor"
        app:passwordToggleContentDescription="Show Password"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="16dp"
        app:passwordToggleTint="@color/orange_1"
        style="@style/TextInputStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/remember_me"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signBtn"
        tools:text="@string/continue_str"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/UpayButtonStyle" />

</LinearLayout>